[project]
name = "lc-course"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "notebook>=7.6.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
